# ladybug-nodejs

./: CMakeLists.txt
.github/workflows/: ci.yml
src_cpp/: main.cpp  node_arrow_test_utils.cpp  node_connection.cpp  node_database.cpp  node_prepared_statement.cpp  node_util.cpp
src_cpp/include/: node_arrow_test_utils.h  node_connection.h  node_database.h  node_prepared_statement.h
src_js/: connection.js  database.js  index.js  index.mjs  lbug.d.ts  prepared_statement.js
test/: test.js  test_arrow_memory_backed_table.js  test_connection.js  test_database.js  test_parameter.js
